--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/logging-winston": "^3.0.0",
     "@hapi/joi": "^16.1.7",
     "body-parser": "^1.19.0",
     "dotenv": "8.2.0",
